--- a/templates/admin/gerer-matos.html.twig
+++ b/templates/admin/gerer-matos.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-	<div style="container">
+	<div class="container">
 
 		<a href="{{ path('create-matos') }}" class="btn btn-success">
 			<i class="fas fa-plus mr-4"></i>Créer un matos</a>
