--- a/public/styles/css/home.css
+++ b/public/styles/css/home.css
@@ -1,4 +1,5 @@
 .home-title {
+  display: none;
   position: absolute;
   background-color: transparent;
   z-index: 2;
@@ -8,32 +9,59 @@
 .home-body {
   height: 100vh;
 }
-.home-body .home-card {
+.home-body .home-link {
+  display: block;
   width: 25%;
-  height: 40vh;
+  height: 30vh;
 }
-.home-body .home-card .home-card-img {
-  height: 65%;
+.home-body .home-link .home-card-img {
+  position: relative;
   width: 100%;
+  height: 100%;
 }
-.home-body .home-card .home-card-img img {
+.home-body .home-link .home-card-img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
+.home-body .home-link .home-card-img .home-card {
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.home-body .home-link .home-card-img .home-card .home-card-body {
+  display: none;
+  flex-direction: column;
+  text-align: center;
+  color: white;
+}
 .home-body #number1 {
   width: 100%;
-  height: 60vh;
+  height: 70vh;
   color: black;
 }
 .home-body #number1 .home-card-img {
   width: 100%;
-  height: 80%;
+  height: 100%;
 }
 .home-body #number1 .home-card-img img {
   width: 100%;
   max-height: 100%;
   object-fit: cover;
+}
+.home-body .home-link:hover .home-card-img {
+  background-color: black;
+}
+.home-body .home-link:hover .home-card-img img {
+  opacity: 0.8;
+}
+.home-body .home-link:hover .home-card-img .home-card .home-card-body {
+  display: flex;
+  transition-duration: 2s;
 }
 
 /*# sourceMappingURL=home.css.map */
