--- a/public/styles/scss/home.scss
+++ b/public/styles/scss/home.scss
@@ -1,4 +1,5 @@
 .home-title{
+    display: none;
     position: absolute;
     background-color: transparent;
     z-index: 2;
@@ -6,27 +7,43 @@
 }
 .home-body{
     height: 100vh;
-    .home-card{
+    .home-link{        
+        display: block;
         width: 25%;
-        height: 40vh;
+        height: 30vh;
         .home-card-img{
-            height: 65%;
+            position: relative;
             width: 100%;
+            height: 100%;
             img{
-                width: 100%;
+                width: 100%;                
                 height: 100%;
                 object-fit: cover;
             }
+            .home-card{
+                bottom: 0;
+                width: 100%;
+                height: 100%;
+                position: absolute;                
+                display: flex;
+                justify-content: center;
+                align-items: center;                
+                .home-card-body{
+                    display: none;
+                    flex-direction: column;
+                    text-align: center;
+                    color: white;
+                }          
+            }
         }
-    
-    }
+    }    
     #number1{
         width: 100%;
-        height: 60vh;    
+        height: 70vh;    
         color: black;
         .home-card-img{
             width: 100%;
-            height: 80%;
+            height: 100%;
             img{
                 width: 100%;
                 max-height: 100%;
@@ -34,4 +51,18 @@
             }
         }
     }
+    .home-link:hover{
+        .home-card-img{
+            background-color: black;
+            img{
+                opacity: 0.8;
+            }
+            .home-card{
+                .home-card-body{
+                    display: flex;
+                    transition-duration: 2s;
+                }
+            }
+        }
+    }        
 }
