--- a/templates/layout/_navbar.html.twig
+++ b/templates/layout/_navbar.html.twig
@@ -1,7 +1,7 @@
 {% set route = app.request.get('_route') %}
 
 			{% for categorie in categories %}
-				<a class="nav-link text-success" href="{{ path('services', {'id': categorie.id}) }}">{{categorie.title}}</a>
+				<a class="nav-link" href="{{ path('services', {'id': categorie.id}) }}">{{categorie.title}}</a>
 				{#<a class="nav-link" href="{{ path('gerer-profil') }}">Gérer project</a>#}
 			{% endfor %}
 	
