--- a/templates/layout/layout.html.twig
+++ b/templates/layout/layout.html.twig
@@ -17,10 +17,11 @@
 		rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
 		{# POLICE Monserrat importé de google #}
 		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-		{% block stylesheets %}
-			{#{{ encore_entry_link_tags('app') }}#}
-		{% endblock %}
+		<link
+		href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+		{#{{ encore_entry_link_tags('app') }}#}
+		<link rel="stylesheet" href="{{asset('styles/css/generale.css')}}"> {% block stylesheets %}{% endblock %}
 
 		{% block javascripts %}
 			{#{{ encore_entry_script_tags('app') }}#}
@@ -28,17 +29,18 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand">
+		<nav class="">
+			<img class="logo" src="{{asset('assets/img/logo_weplus.png')}}">
 			{% set route = app.request.get('_route') %}
-			<a class="nav-link text-success" href="{{ path('accueil') }}">Accueil</a>
-			<a class="nav-link text-success" href="{{ path('concept') }}">Le Concept</a>
+			<a class="nav-link " href="{{ path('accueil') }}">Accueil</a>
+			<a class="nav-link " href="{{ path('concept') }}">Le Concept</a>
 			{% set chemin = app.request.uri %}
 			{% if 'admin' in chemin %}
 				<a class="nav-link text-success" href="{{ path('gerer-categorie') }}">Les catégories de services</a>
 				<a class="nav-link text-success" href="{{ path('gerer-services') }}">Les Services</a>
 				<a class="nav-link text-success" href="{{ path('gerer-matos-categorie') }}">Les catégorie de matériel</a>
 				<a class="nav-link text-success" href="{{ path('gerer-matos') }}">Le matériel à louer</a>
-				<a class="nav-link text-success" href="{{ path('gerer-cause') }}">Les causes défendu par Weplus</a>
+				<a class="nav-link text-success" href="{{ path('gerer-cause') }}">Les causes défendues par Weplus</a>
 				<a class="nav-link text-success" href="{{ path('gerer-asso') }}">Les associations partenaires</a>
 				<a class="nav-link text-success" href="{{ path('gerer-entreprise') }}">Les entreprises partenaire</a>
 				<a class="nav-link text-success" href="{{ path('app_logout') }}">Log out</a>
@@ -50,6 +52,18 @@
 
 
 		{% block body %}{% endblock %}
+
+		<footer>
+			<img class="logo" src="{{asset('assets/img/logo_weplus.png')}}"/>
+			<div class="reso">
+				<a href="https://www.instagram.com/weplus.fr/">LinkedIn</a>
+				<a href="https://www.linkedin.com/company/weplus-agence-coop%C3%A9rative-publicitaire/">Instagram</a>
+				<a href="https://www.youtube.com/channel/UCZOCQl0x0ptuQy2qkfv1DZw">YouTube</a>
+			</div>
+			<a href="{{ path('mentions-legales') }}">mentions légales</a>
+			<p>Copyright SCOP SARL WePlus 2019, tous droits réservés</p>
+			<!-- Webmaster du site d'origine Thomas Sublet -->
+		</footer>
 
 		<!-- JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
