--- a/templates/layout/layout.html.twig
+++ b/templates/layout/layout.html.twig
@@ -63,7 +63,15 @@
 			<a href="{{ path('mentions-legales') }}">mentions légales</a>
 			<p>Copyright SCOP SARL WePlus 2019, tous droits réservés</p>
 			<!-- Webmaster du site d'origine Thomas Sublet -->
+
 		</footer>
+
+		<div class="cookie-legacy {% if app.request.cookies.get('visited') is defined %}{{app.request.cookies.get('visited')}}{% endif %}">
+			<p>Ce site utilise des cookies. En continuant à utiliser ce site, vous consentez à leur utilisation.</p>
+			<a href="{{ path('cookie-warning') }}">Ok</a>
+		</div>
+
+
 
 		<!-- JavaScript Bundle with Popper -->
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
