--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -7,26 +7,28 @@
 
 {% block body %}
 
+	<main>
+		<div class="example-wrapper">
+			<h1>Hello Administrator ! ✅</h1>
 
-	<div class="example-wrapper">
-		<h1>Hello Administrator ! ✅</h1>
+			<p>Toute modification apporter par l'administrateur sur la partie admin aura lieu instantanément sur le site. Réfléchissez donc bien aux modifications que vous voulez apporter.</p>
+			<p>Il appartient à l'administrateur que les images uploadées correspondent à un format web définit comme ceci :  taille max : 1920x1080px, densité de pixel : 72 dpi, poids global de l'image en moyenne en dessous de 500ko.
+			</p>
+			<p></p>
 
-		<p>Toute modification apporter par l'administrateur sur la partie admin aura lieu instantanément sur le site. Réfléchissez donc bien aux modifications que vous voulez apporter.</p>
-		<p>Il appartient à l'administrateur que les images uploadées correspondent à un format web définit comme ceci :  taille max : 1920x1080px, densité de pixel : 72 dpi, poids global de l'image en moyenne en dessous de 500ko.
-		</p>
-		<p></p>
+			<h2>Modification possible sur l'accès administrateur du site</h2>
 
-        <h2>Modification possible sur l'accès administrateur du site</h2>
+			<ul>
+				<li>Les catégories de service du site (Audiovisuel, photographie, digital etc.)</li>
+				<li>Les services pour chaque catégorie (captations d'évènement, films institutionnels,
+				</li>
+				<li>Les catégories de matériel de location</li>
+				<li>Les articles en location</li>
+				<li>Les causes défendues par Weplus</li>
+				<li>Les association qui agissent pour ces causes</li>
+				<li>Les entreprises références de l'entreprise</li>
+			</ul>
 
-		<ul>
-			<li>Les catégories de service du site (Audiovisuel, photographie, digital etc.)</li>
-			<li>Les services pour chaque catégorie (captations d'évènement, films institutionnels, </li>
-			<li>Les catégories de matériel de location</li>
-			<li>Les articles en location</li>
-			<li>Les causes défendues par Weplus</li>
-			<li>Les association qui agissent pour ces causes</li>
-			<li>Les entreprises références de l'entreprise</li>
-		</ul>
-
-	</div>
+		</div>
+	</main>
 {% endblock %}
