--- a/templates/admin/update-matos.html.twig
+++ b/templates/admin/update-matos.html.twig
@@ -18,6 +18,9 @@
 		{{form_row(form.matos_image, {'label': 'photo du matériel à louer'})}}
 		{{form_row(form.matos_image_alt, {'label': 'Description du matériel pour les malvoyants'})}}
 		{{form_row(form.accessoires, {'label': 'Accessoires possibles avec ce matériel'})}}
+
+		{{form_row(form.detail, {'label': 'Détail sur le produit'})}}
+
 	
 		{{form_row(form.submit, {'label': 'Modifier ce matériel à louer'})}}
 
