--- a/templates/services.html.twig
+++ b/templates/services.html.twig
@@ -84,7 +84,7 @@
 document.getElementById("dropRight").classList.toggle("show");
 }
 window.onclick = function (event) {
-if (! event.target.matches('.btn-drop')) {
+if (! event.target.matches('btn-drop')) {
 var dropdowns = document.getElementsByClassName("form");
 var i;
 for (i = 0; i < dropdowns.length; i++) {
