--- a/public/styles/scss/generale.scss
+++ b/public/styles/scss/generale.scss
@@ -14,10 +14,13 @@
 }
 
 body {
+    main{
+        padding: 4rem;
+    }
     position: relative;
     .logo {
         width: 150px;
-        height: auto;
+        height: 75%;
     }
     nav {
         width: 100%;
@@ -35,6 +38,21 @@ body {
         img {
             width: 150px;
             height: auto;
+        }
+        #cart{
+            position: relative;
+            p{
+                position: absolute;
+                top: 3px;
+                right: 5px;         
+                width: 1rem;
+                height: 1rem;
+                background-color: #00c07b;
+                color: white;
+                border-radius: 50%;
+                font-size: 0.6rem;
+                text-align: center;
+            }
         }
     }
     .contact-form {
