--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -11,7 +11,7 @@
 {% block javascripts %}{% endblock %}
 
 {% block body %}
-	<main>
+	<main id="home">
 		<section class="home-title">
 			<h1>Weplus Communiquer en vidéo</h1>
 			<p>Communiquer par des vidéos est le meilleur moyen pour toucher rapidement une nouvelle clientèle. Nous vous proposons toute une gamme de service adapté de la consrtuction d'un site vitrine, à l'animation de réseaux sociaux.</p>
