--- a/public/styles/scss/matos.scss
+++ b/public/styles/scss/matos.scss
@@ -37,6 +37,8 @@
                 text-transform: none;
             }
             .matos-card-text {
+                display: flex;
+                justify-content: space-between;
                 margin-bottom: 32px;
                 color: #777;
                 font-size: 15px;
