--- a/templates/admin/create-matos.html.twig
+++ b/templates/admin/create-matos.html.twig
@@ -3,8 +3,9 @@
 {% block title %}Ajouter un matériel à louer {% endblock %}
 
 {% block body %}
+<main>
 
-	<h1>Admin</h1>
+	<h1>Admin Ajouter une matériel de location</h1>
 
 	{{ form_start(form) }}
 	<div class="container">
@@ -24,5 +25,7 @@
 
 	</div>
 	{{ form_end(form) }}
+
+</main>
     
 {% endblock %}
