--- a/templates/admin/update-matos.html.twig
+++ b/templates/admin/update-matos.html.twig
@@ -1,9 +1,10 @@
 {% extends 'layout/layout.html.twig' %}
 
-{% block title %}Create Catego
+{% block title %}Modifier matériel
 {% endblock %}
 
 {% block body %}
+<main>	
 
 	<h1>Admin</h1>
 
@@ -27,5 +28,6 @@
 
 	</div>
 	{{ form_end(form) }}
-    
+
+</main>
 {% endblock %}
