--- a/templates/devis-variable.html.twig
+++ b/templates/devis-variable.html.twig
@@ -111,6 +111,8 @@
 					<h2>Bon pour accord</h2>
 					<p>Date et signature</p>
 				</div>
+				<h3>Message du client</h3>
+				<p>{{data.message|nl2br}}</p>
 			</section>
 			<section id="coordonnee">
 				<h2>Coordonnées bancaires</h2>
