--- a/templates/matos-categorie.html.twig
+++ b/templates/matos-categorie.html.twig
@@ -1,6 +1,6 @@
 {% extends "layout/layout.html.twig" %}
 
-{% block title %}{% endblock %}
+{% block title %}Location {{categorie.name}}{% endblock %}
 
 {% block stylesheets %}
 <link rel="stylesheet" href="{{asset('styles/css/matoscatego.css')}}">
