--- a/templates/panier.html.twig
+++ b/templates/panier.html.twig
@@ -85,7 +85,7 @@
 				</tr>
 			</tfoot>
 		</table>
-		<div class="container">
+		<div id="locaform" class="container">
 		{{ form(form, {'action': path('handlecontact')}) }}
 		</div>
 	</main>
