--- a/public/styles/css/matoscatego.css
+++ b/public/styles/css/matoscatego.css
@@ -6,16 +6,18 @@
   display: flex;
   flex-direction: column;
   width: 30%;
+  max-height: 400px;
   margin: 20px 15px;
   box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.12);
 }
 .container .service-card .service-card-img {
   position: relative;
-  display: block;
+  display: flex;
+  justify-content: center;
   overflow: hidden;
   width: 100%;
   height: 100%;
-  background-color: #000;
+  background-color: white;
 }
 .container .service-card .service-card-img .service-img {
   max-width: 100%;
