--- a/public/styles/scss/matoscatego.scss
+++ b/public/styles/scss/matoscatego.scss
@@ -5,15 +5,17 @@
         display: flex;
         flex-direction: column;
         width: 30%;
+        max-height: 400px;
         margin: 20px 15px;
         box-shadow: 0 1px 2px 0 rgba(0,0,0,.12);
         .service-card-img {
             position: relative;
-            display: block;
+            display: flex;
+            justify-content: center;
             overflow: hidden;
             width: 100%;
             height: 100%;
-            background-color: #000;
+            background-color: white;
             .service-img {
                 max-width: 100%;
                 height: 100%;
