--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,53 +1,61 @@
-{% block title %}Log in
+{% block title %}
+	<title>Weplus | Login</title>
 {% endblock %}
 
 {% block stylesheets %}
-	<link rel="stylesheet" href="{{asset('styles/css/home.css')}}">
+{# BOOTSTRAP CDNs #}
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous"/>
+		<link
+		rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
+
+	{# Feuille de style css #}
+	<link rel="stylesheet" href="{{asset('styles/css/generale.css')}}">
+
+	{# Police de google font #}
+	{# PT Sans BOLD #}
+	<link rel="preconnect" href="https://fonts.gstatic.com"> <link
+	href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@700&display=swap" rel="stylesheet">
+	{# PT Sans BOLD ITALIC #}
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@1,700&display=swap" rel="stylesheet">
 {% endblock %}
 
 {% block body %}
-	<form method="post">
-		{% if error %}
-			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-		{% endif %}
+	<main>
+		<form method="post">
+			{% if error %}
+				<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+			{% endif %}
 
-		{% if app.user %}
-			<div class="mb-3">
-				You are logged in as
-				{{ app.user.username }},
-				<a href="{{ path('app_logout') }}">Logout</a>
-			</div>
-		{% endif %}
+			{% if app.user %}
+				<div class="mb-3">
+					You are logged in as
+					{{ app.user.username }},
+					<a href="{{ path('app_logout') }}">Logout</a>
+				</div>
+			{% endif %}
 
-		<section class="home-title">
-			<h1>Weplus site côté Location de matériel</h1>
-			<p>Actuellement ce site est en construction et ne sert que pour la partie location de matériel, si vous êtes intéressé par d'autres services Weplus veuillez-vous rendre sur le site suivant :
-				<a href="https://www.weplus.fr/">Weplus</a>
-			</p>
-		</section>
+			<section class="home-title">
+				<h1>Weplus site côté Location de matériel</h1>
+				<p>Actuellement ce site est en construction et ne sert que pour la partie location de matériel, si vous êtes intéressé par d'autres services Weplus veuillez-vous rendre sur le site suivant :
+					<a href="https://www.weplus.fr/">Weplus</a>
+				</p>
+			</section>
 
-		<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-		<label for="inputEmail">Email</label>
-		<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-		<label for="inputPassword">Password</label>
-		<input type="password" name="password" id="inputPassword" class="form-control" required>
+			<h2 class="h3 mb-3 font-weight-normal">L'email est user@weplus.fr</h2>
+			<label for="inputEmail">Email</label>
+			<input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
+			<label for="inputPassword">Password</label>
+			<input type="password" name="password" id="inputPassword" class="form-control" required>
 
-		<input
-		type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+			<input
+			type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-		{#
-		        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-		        See https://symfony.com/doc/current/security/remember_me.html
-		
-		        <div class="checkbox mb-3">
-		            <label>
-		                <input type="checkbox" name="_remember_me"> Remember me
-		            </label>
-		        </div>
-		    #}
-
-		<button class="btn btn-lg btn-primary" type="submit">
-			Sign in
-		</button>
-	</form>
+			<button class="btn btn-lg mt-2" type="submit">
+				Sign in
+			</button>
+		</form>
+	</main>
 {% endblock %}
