--- a/templates/panier.html.twig
+++ b/templates/panier.html.twig
@@ -13,7 +13,7 @@
 			<thead>
 				<tr>
 					<th>matos</th>
-					<th>Prix</th>
+					<th>Prix /jour</th>
 					<th>Accessoires</th>
 					<th>Caution</th>
 					<th>Total</th>
@@ -36,57 +36,120 @@
 									€
 								</br>
 								{% set  prixAcce = prixAcce + a.prixht %}
-								{% endfor %}			
+								{% endfor %}
 							</td>
 							<td>{{element.matos.caution}}</td>
-							<td class="text-end">{{ element.matos.prixht + prixAcce }} €</td>
+							<td class="text-end"><span class="totaux">{{ element.matos.prixht + prixAcce }}</span> €</td>
 							<td>
 								<form action="{{path("panier-ajout")}}" method="post">
 
-								<input name="matoId" type="hidden" value="{{element.matos.id}}">
-								<div class="input-group">
+									<input name="matoId" type="hidden" value="{{element.matos.id}}">
+									<div class="input-group">
 									<button type="submit" class="btn btn-primary">
 									<i class="bi bi-cart-plus "></i>
 									</button>
-								</div>
+									</div>
 								</form>
 								<a href="{{path("panier-delete", {id: loop.index0 })}}" class="btn btn-danger">
 								<i class="bi bi-cart-x"></i>
 								</a>
 							</td>
-						</tr>
-					{% endfor %}
-				{% else %}
-					<tr>
-					<td colspan="5" class="text-center">Votre panier est vide</td>
-					</tr>
-				{% endif %}
-			</tbody>
-			<tfoot>
-				<tr>
-					<td colspan="3">Total HT</td>
-					<td>{{totalCaution}}</td>
-					<td class="text-end">{{ total }} €</td>
-					<td>
-						<a href="{{path("panier-delete-all")}}" class="btn btn-danger">
-							<i class="bi bi-cart-x"></i>
-						</a>
-					</td>
 				</tr>
-				<tr>
-					<td colspan="3">Total TTC</td>
-					<td>{{totalCaution}}</td>
-					<td class="text-end">{{ total * 1.20 }} €</td>
-					<td>
-						<a href="{{path("panier-delete-all")}}" class="btn btn-danger">
-							<i class="bi bi-cart-x"></i>
-						</a>
-					</td>
-				</tr>
-			</tfoot>
-		</table>
-		<div id="locaform" class="container">
-		{{ form(form, {'action': path('handlecontact')}) }}
-		</div>
-	</main>
-{% endblock %}
+			{% endfor %}
+		{% else %}
+			<tr>
+				<td colspan="5" class="text-center">Votre panier est vide</td>
+			</tr>
+		{% endif %}
+	</tbody>
+	<tfoot>
+		<tr>
+			<td colspan="3">Total HT</td>
+			<td>{{totalCaution}}</td>
+			<td class="text-end"><span class="totaux">{{ total }}</span>
+				€</td>
+			<td>
+				<a href="{{path("panier-delete-all")}}" class="btn btn-danger">
+					<i class="bi bi-cart-x"></i>
+				</a>
+			</td>
+		</tr>
+		<tr>
+			<td colspan="3">Total TTC</td>
+			<td>{{totalCaution}}</td>
+			<td class="text-end"><span class="totaux">{{ total * 1.20 }}</span>
+				€</td>
+			<td>
+				<a href="{{path("panier-delete-all")}}" class="btn btn-danger">
+					<i class="bi bi-cart-x"></i>
+				</a>
+			</td>
+		</tr>
+	</tfoot>
+</table>
+<div id="locaform" class="container">
+	{{ form(form, {'action': path('handlecontact')}) }}
+
+	{{ form_start(form) }}
+		
+
+	{{ form_end(form) }}
+
+	</div>
+</main>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
+<script>
+var startdate = new Date(document.getElementById("contact_loc_start").value);
+var enddate = new Date(document.getElementById("contact_loc_end").value);
+
+datediff = (enddate - startdate) / (1000 * 60 * 60 * 24);
+
+var total = document.getElementsByClassName("totaux");
+
+let dateDiffSouvenir = 1; 
+
+function updateTotal() {
+var startdate = new Date(document.getElementById("contact_loc_start").value);
+var enddate = new Date(document.getElementById("contact_loc_end").value);
+
+console.log(startdate);
+console.log(enddate);
+
+
+datediff = (enddate - startdate) / (1000 * 60 * 60 * 24);
+
+	for (i = 0; i < total.length; i++) {
+		
+		newtotal = total[i].textContent * datediff / dateDiffSouvenir;
+		total[i].textContent = newtotal;
+		console.log(newtotal, '<= new total');
+	}
+dateDiffSouvenir = datediff;
+return dateDiffSouvenir;
+};
+
+let inputStart = document.getElementById("contact_loc_end");
+
+let inputEnd = document.getElementById("contact_loc_start");
+
+
+inputStart.addEventListener("change", updateTotal);
+
+inputEnd.addEventListener("change", updateTotal);
+
+
+
+
+console.log(startdate);
+console.log(enddate);
+
+
+
+console.log(datediff);
+</script>{% endblock %}
